# Qwen3-subgen

./: .gitignore  Dockerfile  Dockerfile.AMD  Dockerfile.cpu  README.md  launcher.py  pyproject.toml  requirements.txt  subgen.env  subgen.py  subgen.xml
.github/workflows/: lint.yml  test.yml
tests/: conftest.py
